[gd_scene load_steps=4 format=3 uid="uid://7cc4vdch3hbd"]

[ext_resource type="Script" path="res://UI/Overlays/PlayerOverlay/PlayerOverlay.gd" id="1_ic1qj"]
[ext_resource type="PackedScene" uid="uid://dub7fxxrneltf" path="res://UI/Overlays/PlayerOverlay/InventoryDisplay/InventoryDisplay.tscn" id="2_cs5qm"]
[ext_resource type="PackedScene" uid="uid://oi46lwjctei4" path="res://UI/Overlays/PlayerOverlay/ExperienceBar/ExperienceBar.tscn" id="3_nn11g"]

[node name="PlayerOverlay" type="CanvasLayer"]
script = ExtResource("1_ic1qj")

[node name="InventoryDisplay" parent="." instance=ExtResource("2_cs5qm")]

[node name="ExperienceBar" parent="." instance=ExtResource("3_nn11g")]
