class_name PlayerOverlay
extends CanvasLayer


@onready var inventory_display: InventoryDisplay = $InventoryDisplay
@onready var experience_bar: ExperienceBar = $Panel/MarginContainer/HBoxContainer/ExperienceBar
@onready var gold_display: GoldDisplay = $Panel/MarginContainer/HBoxContainer/GoldDisplay
